catkin_ws/logs/backend/build.make.026.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘void readImage(SLAM::Frame, int)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:118:56: error: ‘imread’ was not declared in this scope
  cv::Mat img1 = imread(imgName, CV_LOAD_IMAGE_GRAYSCALE);
                                                        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:118:56: note: suggested alternative:
In file included from /opt/opencv3/include/opencv2/highgui.hpp:47:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:10:
/opt/opencv3/include/opencv2/imgcodecs.hpp:132:18: note:   ‘cv::imread’
 CV_EXPORTS_W Mat imread( const String& filename, int flags = IMREAD_COLOR );
                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:129:17: error: expected primary-expression before ‘;’ token
   cout << string; 
                 ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
